# kdreams

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api.md  index.md  recipes.md
kdream/: __init__.py  cli.py  exceptions.py  hub.py
kdream/agents/: __init__.py  recipe_generator.py
kdream/agents/skills/: entrypoint-finder.md  hf-script-writer.md  inference-mapper.md  linkedin-post-writer.md  model-locator.md  parameter-mapper.md  recipe-writer.md  repo-inspector.md
kdream/backends/: __init__.py  base.py  colab.py  local.py  runpod.py
kdream/core/: __init__.py  recipe.py  registry.py  runner.py  verifier.py
kdream/recipes/audio/: audioldm2.yaml  bark.yaml  musicgen-large.yaml  stable-audio-open.yaml  whisper-large-v3.yaml
kdream/recipes/image-generation/: flux-1-dev.yaml  flux-1-schnell.yaml  playground-v2-5.yaml  sdxl-lightning.yaml  stable-diffusion-xl-base.yaml  z-image-turbo.yaml  z-image-turbo_runner.py
kdream/recipes/music/: audioldm2-music.yaml  musicgen-melody.yaml  musicgen-stereo-large.yaml  stable-audio-open-music.yaml  yue-music-gen.yaml
kdream/recipes/tool/: corridorkey.yaml
kdream/recipes/video-generation/: animatediff-v3.yaml  cogvideox-5b.yaml  corridorkey.yaml  mochi-1.yaml  wan-2-1-t2v.yaml
kdream/service/: __init__.py  mcp_client.py  mcp_server.py  ngrok_tunnel.py
recipes/: README.md
recipes/audio/: musicgen-large.yaml  whisper-large-v3.yaml
recipes/image-generation/: z-image-turbo.yaml
recipes/text-generation/: llama-3-8b-instruct.yaml  mistral-7b-v03.yaml
tests/: __init__.py  conftest.py  test_agent_pipeline.py  test_cli.py  test_colab_backend.py  test_exceptions_and_edges.py  test_hub.py  test_local_backend.py  test_local_backend_run.py  test_recipe.py  test_registry.py  test_runner.py  test_runpod_backend.py  test_service.py  test_verifier.py
